--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Lucky Draw System</title>
+<title>Shuffle Sistem By Riset HMTI FT Unsika</title>
 
 <style>
 * {
@@ -116,7 +116,7 @@ button:hover {
 <body>
 
 <div class="card">
-    <h1>🎯 Pemilihan Pemenang</h1>
+    <h1>🎯 Pemilihan Pemenang Survey Kebutuhan</h1>
 
     <form method="POST" enctype="multipart/form-data">
 
@@ -174,4 +174,5 @@ setTimeout(() => {
 </script>
 
 </body>
+
 </html>
