--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Lucky Draw Ultimate</title>
+<title>Shuffle Sistem Buy Riset HMTI FT Unsika</title>
 
 <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
@@ -139,10 +139,10 @@ button:hover{
 <body>
 
 <div class="container">
-    <h1>🎯 LUCKY DRAW ULTIMATE</h1>
+    <h1>Shuffle Sistem By HMTI FT Unsika</h1>
 
     <div class="drop-area" id="dropArea">
-        📂 Drag & Drop or Click to Upload Excel
+        📂 Click to Upload Excel
         <input type="file" id="fileInput" hidden>
         <div class="file-name" id="fileName">No file selected</div>
     </div>
@@ -252,3 +252,4 @@ drawBtn.addEventListener("click", () => {
 
 </body>
 </html>
+
