--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Shuffle Sistem Buy Riset HMTI FT Unsika</title>
+<title>Shuffle Sistem By Riset HMTI FT Unsika</title>
 
 <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
@@ -139,7 +139,7 @@ button:hover{
 <body>
 
 <div class="container">
-    <h1>Shuffle Sistem By HMTI FT Unsika</h1>
+    <h1>Shuffle Sistem By Riset HMTI FT Unsika</h1>
 
     <div class="drop-area" id="dropArea">
         📂 Click to Upload Excel
@@ -252,4 +252,5 @@ drawBtn.addEventListener("click", () => {
 
 </body>
 </html>
+
 
